# chat

./: .clang-format  CMakeLists.txt
include/: net.c  net.h
src/: client.c  macros.h  server.c
